Correcciones index_styles.css
Corrigiendo rutas de enlaces por una imagen que no estaba siendo mostrada como background de uno de los text area.

--- a/CSS/index_styles.css
+++ b/CSS/index_styles.css
@@ -98,7 +98,7 @@ textarea{
 
 #txtResultado{
     background: #706f6f;
-    background-image: url(./img/Munieco.svg);
+    background-image: url(img/Munieco.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-position: bottom;
